# Blasw

./: CMakeLists.txt  LICENSE  README.md  USAGE.md
cmake/: BLASWConfig.cmake  FindCBLAS.cmake  FindLAPACKE.cmake
src/blasw/: blasw.h  config.h.in
test/: tests.cpp
